--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -3869,7 +3869,8 @@ margin-bottom: 3px;
 		-webkit-box-align: center;
 		display: box;
 		box-pack: center;
-		box-align: center;                 
+		box-align: center;       
+                overflow-y: hidden;          
 	}
 	
 	#dashBoard.up{
